--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
     td{
         background-color: beige;
     }
+    h3{
+        color: aqua;
+    }
 </style>
 <body>
     <div class="container">
